CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT( Viewer )

SET(MEDV4D_CMAKE_SOURCE_DIR "${CMAKE_SOURCE_DIR}/../.." )
SET(MEDV4D_CMAKE_MODULES_DIR ${MEDV4D_CMAKE_SOURCE_DIR}/Modules)

INCLUDE( "${MEDV4D_CMAKE_MODULES_DIR}/ApplicationCMakeListMandatoryInclude.cmake" )

###############################
## OIS
OPTION(OIS_ENABLED "Enable components with OIS support" OFF)
IF(OIS_ENABLED)
	MESSAGE(STATUS "OIS support enabled")
	ADD_DEFINITIONS(-DOIS_ENABLED)

	FIND_PACKAGE(OIS REQUIRED)

	INCLUDE_DIRECTORIES( ${OIS_INCLUDE_DIR} )
ELSE(OIS_ENABLED)
	MESSAGE(STATUS "OIS support disabled")
ENDIF(OIS_ENABLED)
## OIS
###############################

SET(EXECUTABLE_OUTPUT_PATH ${MEDV4D_CMAKE_SOURCE_DIR}/../executables)

OPTION(EXTENSION_MODULES_ENABLED "Enable applications extension modules" OFF)
OPTION(MEASUREMENT_MODULE_ENABLED "Enable applications 'Measurement' extension module (separate)" ON)
IF( EXTENSION_MODULES_ENABLED OR MEASUREMENT_MODULE_ENABLED )
	IF( EXTENSION_MODULES_ENABLED )
		ADD_DEFINITIONS(-DEXTENSION_MODULES_ENABLED)
	ENDIF( EXTENSION_MODULES_ENABLED )
	IF( MEASUREMENT_MODULE_ENABLED )
		ADD_DEFINITIONS(-DMEASUREMENT_MODULE_ENABLED)
	ENDIF( MEASUREMENT_MODULE_ENABLED )
	TARGET_MEDV4D_PROGRAM( Viewer ${MEDV4D_CMAKE_SOURCE_DIR}/../Applications/Viewer )
ELSE( EXTENSION_MODULES_ENABLED OR MEASUREMENT_MODULE_ENABLED )
	TARGET_MEDV4D_PROGRAM_NONRECURSIVE( Viewer ${MEDV4D_CMAKE_SOURCE_DIR}/../Applications/Viewer )
ENDIF( EXTENSION_MODULES_ENABLED OR MEASUREMENT_MODULE_ENABLED )


#SET(VIEWER_SRC_ROOT_DIR "${MEDV4D_CMAKE_SOURCE_DIR}/../Applications/Viewer" )
#SET(VIEWER_SRC_DIR_LIST 
#	"${VIEWER_SRC_ROOT_DIR}"
#	"${VIEWER_SRC_ROOT_DIR}/ShoulderMeasurementModule"
#	"${VIEWER_SRC_ROOT_DIR}/AnnotationModule"
#	)

#TARGET_MEDV4D_PROGRAM_DIRS( Viewer VIEWER_SRC_DIR_LIST )


###############################
## OIS
IF(OIS_ENABLED)
	TARGET_LINK_LIBRARIES(Viewer ${OIS_LIBRARIES})
ENDIF(OIS_ENABLED)
## OIS
###############################
