#MedV4D Project "solution"

#CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
#PROJECT(MEDV4D)

#SET(APPLICATION_DIR ${CMAKE_SOURCE_DIR}/../Applications )

#SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/../lib)
#SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/../executables)
#SET(CMAKE_DEBUG_POSTFIX, "d") 

#INCLUDE( "Functions.cmake" )

#INCLUDE( "FindPackages.cmake" )



#LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/../lib /usr/local/lib ${DCMTK_LIBRARIES})



INCLUDE( "SourcesManagement.cmake" )


#ADD_SUBDIRECTORY(m4dPilot)
#ADD_SUBDIRECTORY(OrganSegmentation)


