CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT( Denoise )

SET(MEDV4D_CMAKE_SOURCE_DIR "${CMAKE_SOURCE_DIR}/../.." )
SET(MEDV4D_CMAKE_MODULES_DIR ${MEDV4D_CMAKE_SOURCE_DIR}/Modules)

INCLUDE( "${MEDV4D_CMAKE_MODULES_DIR}/ApplicationCMakeListMandatoryInclude.cmake" )

FIND_PACKAGE(OpenCL REQUIRED)
FIND_PACKAGE(OpenMP REQUIRED)

SET(EXECUTABLE_OUTPUT_PATH ${MEDV4D_CMAKE_SOURCE_DIR}/../executables)

SET(MEDV4D_ALL_LIBRARIES ${OPENCL_LIBRARIES} ${MEDV4D_ALL_LIBRARIES})
INCLUDE_DIRECTORIES( ${OPENCL_INCLUDE_DIRS} )

TARGET_MEDV4D_PROGRAM( Denoise ${MEDV4D_CMAKE_SOURCE_DIR}/../Applications/Denoise )

SET_TARGET_PROPERTIES(Denoise PROPERTIES COMPILE_FLAGS ${OpenMP_CXX_FLAGS})
SET_TARGET_PROPERTIES(Denoise PROPERTIES LINK_FLAGS ${OpenMP_CXX_FLAGS})
